app/static/css/theme.css
html {
	margin: 0;
}
body {
	position: relative;
	background: #DDDCE2 url(../img/body_bg.jpg) repeat left top;
	-webkit-font-smoothing: antialiased;
	font-family: 'Lato', sans-serif !important;
	padding-top: 107px;
}

p{
	font-size: 16pt;
	line-height: 20pt;
}
@media (max-width: 979px) {
	body { padding-top: 0 !important; }
}
a:hover {
	text-decoration: none;
}
input[type="text"], 
input[type="password"], 
input[type="submit"],
textarea {
	font-family: 'Lato', Helvetica;
}

/* ALEX ADDED STYLES 
--------------------------- */
@font-face {
    font-family: 'MathleteSkinny';
    src: url('../font/Mathlete-Skinny-webfont.eot');
    src: url('../font/Mathlete-Skinny-webfont.eot?#iefix') format('embedded-opentype'),
         url('../font/Mathlete-Skinny-webfont.woff') format('woff'),
         url('../font/Mathlete-Skinny-webfont.ttf') format('truetype'),
         url('../font/Mathlete-Skinny-webfont.svg#MathleteSkinny') format('svg'),
         url('../font/Mathlete-Skinny.otf') format('otf');
    font-weight: normal;
    font-style: normal;
}

h1,h2,h3,h4{
	font-family: 'MathleteSkinny';
}

h3{
	font-size: 45px;
}

.no-fixed-height{
	height:auto !important;
}

.padding-top-50{
	padding-top: 50px;
}

.padding-top-none{
	padding-top: 0px !important;
}

.padding-small{
	padding: 15px;
}

.red-border{
	border: 3px solid rgb(180,47,47);
	-webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
          box-shadow: 0 0 3px rgba(0, 0, 0, 0.15);
}

.label-bg{
	background-image: url('../img/label_container_bg.png'), url('../img/label_container_fold.png');
	background-position: left, top right;
	background-repeat: repeat-x, no-repeat;
	-webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; 
}

.logo {
    position: absolute;
    z-index: 20;
}

#logo-symbol{
	width: 145px;
	
	float: left;
}

a#logo-symbol-link{
	background: url('../img/logo_top_corner_sprite.png') no-repeat;
	width: 145px;
	height: 75px;
}



a#logo-symbol-link:hover{
	background-position: 0 -98px;
}

.font-30{
	font-size: 26pt;
	line-height: 1.4em;
}

.shadow-top{
	background: url("../img/download_shadow_container.png") top center no-repeat;
}

.yellow-background{
	background-color: #fbd238;
}

.magicbook-background{
	background-color: #fef1c3;
}

.video-frame{
	width: 410px;
	height: 320px;
	background: url("../img/features_video_frame.png") no-repeat;
}



.video-frame iframe{
	padding-top: 80px;
	padding-left: 78.5px;
	padding-right: 62.5px;
}

.second-nav-bar{
	width: 960px;
}

/*  Homepage
--------------------------------------------------*/

.small-device-banner{
	display: none;
}

/*  Story page 
--------------------------------------------------*/
.story-box-video{
	height: 400px;
}

/* Download page 
--------------------------------------------------*/

.download-box{

}

.blue-border{
	border: 5px solid #e0edfa;
}

.green-border{
	border: 5px solid #b9d94c;
}

.download-texture{
	height: 124px;
	text-align: center;
	padding-top: 22px;

}

.download-texture h2 a{
	color: white;
	font-size: 50px;

}


.download-blue-dots{
	background: url("../img/download_blue_dot.png") repeat-x;
}

.download-orange-dots{
	background: url("../img/download_orange_dot.png") repeat-x;
}

.download-purple{
	background: url("../img/download_purple.png") repeat-x;
}

.border-bottom-yellow{
	border-bottom: 5px solid #fbd238;
}

/* Login page
-------------------------------------------------- */

.not-ready-yet{
	height: 700px;
	background-color: #fef1c3;
	text-align: center;
	padding-top: 120px;
}


/* Beta Testing page 
------------------------------ */

#mc_embed_signup .btn{
	display: block;
	margin-bottom: 60px;
}

.email-signup{
	background-color: ;
}

/* About us pages
-------------------------------------------------- */

.team-picture{
	height: 375px;
	text-align: center;
	font-color: white;
	padding-top: 80px;
}

.team-picture-second-row{
	padding-top: 220px;
}

.card-1{
	background: url('../img/team_card_1.png') no-repeat;
}

.card-2{
	background: url('../img/team_card_2.png') no-repeat;
}

.card-3{
	background: url('../img/team_card_3.png') no-repeat;
}

/* Navbar
-------------------------------------------------- */
body.pull_top {
    padding-top: 0px !important;
}
header {
    background: rgba(0,0,0,.6) !important;
}

.navbar.navbar-static-top {
    /*margin-bottom: 35px;*/
}
.navbar.transparent.navbar-inverse .navbar-inner {
    background: rgba(0,0,0,0.4);
    border-bottom: 1px solid rgb(88, 88, 88);
}
.navbar.transparent.navbar-inverse .navbar-inner .container {
    margin-top: 10px;
    margin-bottom: 10px;
    -webkit-transition: margin .2s ease-in-out;
    -moz-transition: margin .2s ease-in-out;
    transition: margin .2s ease-in-out;
}
.navbar.navbar-inverse .navbar-inner {  
    padding: 10px 0px 10px 0px;
    background: #66cc99;    
}
.navbar.navbar-inverse .navbar-inner.sticky {
    background: rgba(0,0,0,0.8);
    border-bottom: 1px solid #252525;
}
.navbar-inverse .navbar-inner.sticky .container {
    margin-top: 0px !important;
    margin-bottom: 0px !important;
}
.navbar-inverse .brand {
    color: #fff;
}
.navbar-inverse .nav > li > a {
    /*color: rgb(177, 177, 177);*/
    font-size: 13px;
    font-weight: bold;
    color: #fff;
    text-shadow: 0 1px 0 rgba(0,0,0,.5);
    opacity: .6;
    filter: alpha(opacity=60);
    -webkit-transition: all .2s linear;
    -moz-transition: all .2s linear;
    transition: all .2s linear;
}
.navbar-inverse .nav > li > a:hover,
.navbar-inverse .nav > li > a.active {
    color: #fff;
    opacity: 1;
    filter: alpha(opacity=100);
}
.navbar-inverse .dropdown-menu {
	background: #252528;
}
.navbar-inverse .nav > li > .dropdown-menu::after {
	border-bottom: 6px solid #252528;
}
.navbar-inverse .dropdown-menu li > a {
	color: #fff;
}


.navbar2 {
	margin-bottom: 30px;
	background: rbga(0,0,0,0.9);
}
/* ... */

